@@ -9,8 +9,8 @@ import paulscode.sound.SoundSystemConfig;
 
 public class PlayerNeo extends Player {
 
-	public PlayerNeo(int n, float[] consts, int[] f, int[] c, Controller c1, boolean c1Exist, float[] p, int[] xyL, Color se, SoundSystem ss, String sn, Player op) {
-		super(n, consts, f, c, c1, c1Exist, p, xyL, se, ss, sn, op);
+	public PlayerNeo(int n, float[] consts, int[] f, int[] c, Controller c1, boolean c1Exist, float[] p, int[] xyL, Color se, SoundSystem ss, String sn) {
+		super(n, consts, f, c, c1, c1Exist, p, xyL, se, ss, sn);
 	}
 
 	@Override
@@ -45,15 +45,18 @@ public class PlayerNeo extends Player {
 				power = 0;
 				velMag = VELMAG;
 				mySoundSystem.quickPlay( true, "whoosh2.wav", false, 0, 0, 0, SoundSystemConfig.ATTENUATION_NONE, 0.0f );
-				if(mySoundSystem.playing(slowName));
-				mySoundSystem.pause(slowName);
+				if(mySoundSystem.playing(slowName))
+					mySoundSystem.pause(slowName);
+				for(Player player: players){
+					player.setSlowMo(false);
+				}
 			}
 		}
 
 		if(powerCoolDown>-500f){
 			powerCoolDown -=(float)delta;
 			if(powerCoolDown<=0 && !playedPowerDing){
-				if(otherPlayer.isPower()){
+				if(slowMo){
 					mySoundSystem.quickPlay( true, "pingslow.wav", false, 0,0,0, SoundSystemConfig.ATTENUATION_NONE, 0.0f );
 				}else{
 					mySoundSystem.quickPlay( true, "ping.wav", false, 0, 0, 0, SoundSystemConfig.ATTENUATION_NONE, 0.0f );
@@ -74,6 +77,9 @@ public class PlayerNeo extends Player {
 		playedPowerDing = false;
 		mySoundSystem.quickPlay( true, "whoosh2r.wav", false, 0, 0, 0, SoundSystemConfig.ATTENUATION_NONE, 0.0f );
 		mySoundSystem.play(slowName);
+		for(Player p: players){
+			p.setSlowMo(true);
+		}
 	}
 	
 	@Override
@@ -87,6 +93,9 @@ public class PlayerNeo extends Player {
 		velMag = VELMAG;
 		if(mySoundSystem.playing(slowName))
 			mySoundSystem.pause(slowName);
+		for(Player player: players){
+			player.setSlowMo(false);
+		}
 	}
 
 	@Override
