@@ -3,6 +3,8 @@ Changelog:
 5.31.13
 Made Player abstract, made methods update(), isKicking(), setPower(), flashKick(), activatePower() and powerKeyReleased() abstract.
 Gave PlayerTwoTouch more stationary dribble effect in setKicking()
+Prep for Twins: Players now contain an array of all players instead of just otherPlayer
+				Players have variable slowMo which is set by PlayerNeo when he goes in and out of slowmo
 
 5.30.13:
 Added player on player collision sliding in Player.updatePos()
